--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -42,6 +42,8 @@ h1, h2, h3, h4 {
     margin-bottom: 70px;
 }
 
+body {background-color: #F7EEDD;}
+
 .post h1 a, .post h1 a:visited {
     color: #000000;
 }
