--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -15,7 +15,7 @@
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Lobster', cursive;
+    font-family: 'Lobster';
 }
 
 .date {
@@ -41,8 +41,6 @@ h1, h2, h3, h4 {
 .post {
     margin-bottom: 70px;
 }
-
-body {background-color: #F7EEDD;}
 
 .post h1 a, .post h1 a:visited {
     color: #000000;
