--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -15,7 +15,7 @@
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Lobster', cursive;
+    font-family: 'Gaegu';
 }
 
 .date {
@@ -40,6 +40,8 @@ h1, h2, h3, h4 {
 
 .post {
     margin-bottom: 70px;
+    font-family: 'Gaegu';
+    font-size: 14pt;
 }
 
 body {background-color: #F7EEDD;}
