--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -15,7 +15,7 @@
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Gaegu';
+    font-family: 'Permanent Marker';
 }
 
 .date {
@@ -40,7 +40,7 @@ h1, h2, h3, h4 {
 
 .post {
     margin-bottom: 70px;
-    font-family: 'Gaegu';
+    font-family: 'Titillium Web';
     font-size: 14pt;
 }
 
